datasets/dataset_txt/mitmproxy/mitmproxy_1539.txt
leandroarndt commented on 22 Jan 2015
Command exits with the following dump:
Downloading/unpacking mitmproxy                                                 
  Running setup.py egg_info for package mitmproxy                               
    Traceback (most recent call last):
      File "<string>", line 16, in <module>
      File "/tmp/pip-build-root/mitmproxy/setup.py", line 19
        "netlib>=%s, <%s" % (version.MINORVERSION, version.NEXT_MINORVERSION),
                                                                             ^
    SyntaxError: invalid syntax
    Complete output from command python setup.py egg_info:
    Traceback (most recent call last):

  File "<string>", line 16, in <module>

  File "/tmp/pip-build-root/mitmproxy/setup.py", line 19

    "netlib>=%s, <%s" % (version.MINORVERSION, version.NEXT_MINORVERSION),

                                                                         ^

SyntaxError: invalid syntax

----------------------------------------
Command python setup.py egg_info failed with error code 1 in /tmp/pip-build-root
/mitmproxy
Storing complete log in /root/.pip/pip.log
This is inside the deps dictionary (line 18) at setup.py. If I try to change it to a tuple or list (thus correcting syntax), I get an AttributeError (trying to access deps.update). The same happens at line 27, with another dict.